[gd_scene load_steps=10 format=3 uid="uid://dr7e3gliqbqol"]

[ext_resource type="Script" path="res://Scripts/game_state_controller.gd" id="1_lvhgg"]
[ext_resource type="PackedScene" uid="uid://b17q7jmfxp3yd" path="res://Scenes/deck.tscn" id="1_o1wbk"]
[ext_resource type="Script" path="res://Scripts/playing_ui.gd" id="2_5sl1f"]
[ext_resource type="PackedScene" uid="uid://bqp8g4s2u4l2k" path="res://Scenes/card_pile.tscn" id="2_p858k"]
[ext_resource type="PackedScene" uid="uid://14f8hnghwoy4" path="res://Scenes/player_hand.tscn" id="4_dvg06"]
[ext_resource type="PackedScene" uid="uid://cv4cbva2nfoe7" path="res://Scenes/castle_pile.tscn" id="5_vwfhj"]

[sub_resource type="Curve" id="Curve_alsi3"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="FontFile" id="FontFile_o8pxp"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_hlwrt"]
font = SubResource("FontFile_o8pxp")

[node name="Main" type="Node2D"]
metadata/_edit_horizontal_guides_ = [341.0, 659.0]
metadata/_edit_vertical_guides_ = [700.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1937.0
offset_bottom = 1109.0
mouse_filter = 2
color = Color(0.130955, 0.00357984, 0.184621, 1)

[node name="HandBackground" type="ColorRect" parent="."]
offset_left = 197.0
offset_top = 655.0
offset_right = 1213.0
offset_bottom = 771.0
mouse_filter = 2
color = Color(0.194128, 0.0013389, 0.205385, 1)

[node name="GameStateController" type="Node2D" parent="."]
script = ExtResource("1_lvhgg")

[node name="Deck" parent="GameStateController" instance=ExtResource("1_o1wbk")]
offset_left = 660.0
offset_top = 269.0
offset_right = 760.0
offset_bottom = 413.0

[node name="PlayerUI" type="Control" parent="GameStateController" groups=["ui_layer"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_5sl1f")

[node name="PlayerHand" parent="GameStateController/PlayerUI" instance=ExtResource("4_dvg06")]
offset_left = 197.0
offset_top = 655.0
offset_right = 1213.0
offset_bottom = 771.0
x_spread = 60.0
hand_rotation_curve = SubResource("Curve_alsi3")

[node name="Piles" type="Node2D" parent="GameStateController/PlayerUI"]

[node name="CastlePile" parent="GameStateController/PlayerUI/Piles" instance=ExtResource("5_vwfhj")]
position = Vector2(404, 574)

[node name="CastlePile2" parent="GameStateController/PlayerUI/Piles" instance=ExtResource("5_vwfhj")]
position = Vector2(524, 573)

[node name="CastlePile3" parent="GameStateController/PlayerUI/Piles" instance=ExtResource("5_vwfhj")]
position = Vector2(644, 573)

[node name="GameText" type="Label" parent="GameStateController"]
offset_left = 144.0
offset_top = 133.0
offset_right = 329.0
offset_bottom = 184.0
label_settings = SubResource("LabelSettings_hlwrt")
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardPile" parent="GameStateController" instance=ExtResource("2_p858k")]
position = Vector2(893, 343)
scale = Vector2(1, 1)

[node name="Start Game" type="Button" parent="."]
offset_left = 35.0
offset_top = 23.0
offset_right = 164.0
offset_bottom = 86.0
scale = Vector2(0.8, 0.8)
text = "Start Game"
icon_alignment = 1

[connection signal="button_down" from="GameStateController/Deck" to="GameStateController" method="_on_deck_button_down"]
[connection signal="button_down" from="Start Game" to="GameStateController" method="_on_start_game_button_down"]
